[package]
name = "rust-demo-rgrep"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Cypher <silverbullllet@163.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/silverbullllet/rust-demo-rgrep"
repository = "https://github.com/silverbullllet/rust-demo-rgrep"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
indicatif = "0.17.8"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs = "1.1.1"